# pilot-hdc-approval

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  gunicorn_config.py  pyproject.toml  run.py
.github/workflows/: hdc-pipeline.yml
app/: api_registry.py  config.py  logger.py  main.py
app/commons/meta_services/: __init__.py  models.py
app/commons/notification_service/: client.py  models.py
app/commons/notifier_service/: email_service.py
app/commons/pipeline_ops/: copy.py
app/commons/project_services/: __init__.py
app/commons/psql_services/: __init__.py
app/models/: base.py  copy_request.py  copy_request_sql.py
app/resources/: error_handler.py
app/routers/: api_root.py
app/routers/v1/api_copy_request/: api_copy_request.py  request_notify.py
app/routers/v1/api_health/: api_health.py
migrations/: env.py
migrations/scripts/: create_approval_db.sql  create_approval_schema.sql
migrations/versions/: 396048c16b59_adding_copy_request_tables.py
tests/: conftest.py
tests/routers/v1/: test_copy_approval.py
