[tool.poetry]
name = "service_approval"
version = "2.2.0"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.63.0"
fastapi-utils = "0.2.1"
uvicorn = "0.12.3"
FastAPI-SQLAlchemy = "0.2.1"
psycopg2-binary = "2.9.3"
python-json-logger = "2.0.2"
pilot-platform-common = "^0.1.0"
httpx = "0.23.0"
pytest-mock = "3.7.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"
pytest-asyncio = "0.19.0"
pytest-dependency = "0.5.1"
pytest-httpx = "0.21.0"
mock = "4.0.3"
SQLAlchemy-Utils = "0.38.2"
testcontainers = "3.4.2"
alembic = "1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
